# Skyborn

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  Skyborn.sln  postbuild.bat
Sandbox/: CMakeLists.txt  Sandbox.vcxproj
Sandbox/src/: Game.cpp  Game.h  Main.cpp  SandboxGame.h
Skyborn/: Skyborn.vcxproj
Skyborn/src/: Common.h  CommonHeaders.h  Defines.h  Skyborn.h  Version.h
Skyborn/src/Core/: Application.cpp  Application.h  Clock.cpp  Clock.h  Event.cpp  Event.h  Input.h
Skyborn/src/Debug/: Logger.cpp  Logger.h
Skyborn/src/Graphics/: GraphicsBackend.cpp  GraphicsBackend.h  GraphicsFrontend.cpp  GraphicsFrontend.h  GraphicsInterface.h
Skyborn/src/Graphics/Vulkan/: VulkanBackend.cpp  VulkanBackend.h  VulkanCommon.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFence.h  VulkanFramebuffer.cpp  VulkanImage.cpp  VulkanImage.h  VulkanInterface.h  VulkanPlatform.h  VulkanRenderPass.cpp  VulkanSwapchain.cpp  VulkanSwapchain.h
Skyborn/src/Memory/: LinearAllocator.cpp  LinearAllocator.h  Memory.cpp  Memory.h
Skyborn/src/Platform/: Platform.h  PlatformWindows.cpp
Skyborn/src/Skyborn/: Common.h  Skyborn.h  Version.h
Skyborn/src/Skyborn/Core/: Application.cpp  Application.h  Clock.cpp  Clock.h  Event.cpp  Event.h  Input.cpp  Input.h
Skyborn/src/Skyborn/Debug/: Logger.cpp  Logger.h
Skyborn/src/Skyborn/Graphics/: GraphicsInterface.h
Skyborn/src/Skyborn/Graphics/Vulkan/: VulkanBackend.cpp  VulkanBackend.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCommon.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFence.cpp  VulkanFramebuffer.h  VulkanPlatform.h  VulkanRenderPass.h  VulkanSwapchain.cpp
Skyborn/src/Skyborn/Memory/: LinearAllocator.cpp  LinearAllocator.h  Memory.cpp  Memory.h
Skyborn/src/Skyborn/Platform/: Platform.h  PlatformWindows.cpp
Skyborn/src/Skyborn/Utl/: HeapArray.h  Math.h  Util.cpp  Util.h  Vector.h
Skyborn/src/Utl/: Array.h  HeapArray.h  Math.h  Util.cpp  Util.h  Vector.h
Testbed/: Testbed.vcxproj
Testbed/src/: Expect.h  Main.cpp  TestManager.cpp  TestManager.h
Testbed/src/Memory/: LinearAllocatorTests.cpp  LinearAllocatorTests.h
engine/: CMakeLists.txt
engine/src/Skyborn/: Defines.h  Entrypoint.h
engine/src/Skyborn/Core/: Application.cpp  Application.h  Clock.cpp  Clock.h  Event.cpp  Event.h  Input.cpp  Input.h  Platform.h  PlatformWin32.cpp
engine/src/Skyborn/Debug/: Asserts.h  Logger.cpp  Logger.h
engine/src/Skyborn/Graphics/: GraphicsPlatformInterface.h  Renderer.cpp  Renderer.h
engine/src/Skyborn/Graphics/Vulkan/: VkCommandBuffer.cpp  VkCommandBuffer.h  VkCommon.h  VkCore.cpp  VkCore.h  VkFence.cpp  VkFence.h  VkFramebuffer.cpp  VkFramebuffer.h  VkHelpers.cpp  VkHelpers.h  VkImage.cpp  VkImage.h  VkInterface.cpp  VkInterface.h  VkRenderpass.cpp  VkRenderpass.h  VkSurface.cpp  VkSurface.h  VkSwapchain.cpp  VkSwapchain.h
engine/src/Skyborn/Util/: FileSystem.cpp  FileSystem.h  HeapArray.h  Maths.h  Util.h  Vector.h
scripts/: add_source_files.py  build-all.bat  build-all.sh  build_all.py  postbuild.bat  postbuild.sh
testbed/: CMakeLists.txt
testbed/src/: Expect.h  Main.cpp  TestManager.cpp  TestManager.h
testbed/src/Tests/: BitsTest.cpp  BitsTest.h  HeapArrayTest.cpp  HeapArrayTest.h  MathsTest.cpp  MathsTest.h  VectorTest.cpp  VectorTest.h
